Add kitty 'spacecamp' color scheme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,6 +16,68 @@ disable_ligatures   never
 
 #}}}
 
+#: Color scheme {{{
+
+foreground #feffff
+background #1b1c1b
+
+#: The foreground and background colors
+
+selection_foreground #000000
+
+#: The foreground for text selected with the mouse. A value of none
+#: means to leave the color unchanged.
+
+selection_background #dddedd
+
+#: The background for text selected with mouse.
+
+#: The 16 terminal colors. There are 8 basic colors, each color has a
+#: dull and bright version. You can also set the remaining colors from
+#: the 256 color table as color16 to color255.
+
+color0  #1b1c1b
+color8  #333333
+
+#: black
+
+color1  #ff5300
+color9  #ff6c00
+
+#: red
+
+color2  #0cbe02
+color10 #77ff48
+
+#: green
+
+color3  #f4d500
+color11 #ffe700
+
+#: yellow
+
+color4  #8ba9e3
+color12 #9dd1ff
+
+#: blue
+
+color5  #dd68ec
+color13 #ea81ff
+
+#: magenta
+
+color6  #cdfd00
+color14 #ddff3b
+
+#: cyan
+
+color7  #f7f8f7
+color15 #fefffe
+
+#: white
+
+#}}}
+
 #: OS specific tweaks {{{
 
 macos_quit_when_last_window_closed  yes
