Adjust background color

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,7 +19,7 @@ disable_ligatures   never
 #: Color scheme {{{
 
 foreground #feffff
-background #1b1c1b
+background #121212
 
 #: The foreground and background colors
 
