--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,15 +3,20 @@
 #: Font family
 #: To get a full list of supported fonts use the `kitty list-fonts` command.
 
-#font_family         JetBrains Mono Regular
-#bold_font           JetBrains Mono Bold
-#italic_font         JetBrains Mono Italic
-#bold_italic_font    JetBrains Mono Bold Italic
+# font_family         JetBrains Mono Regular
+# bold_font           JetBrains Mono Bold
+# italic_font         JetBrains Mono Italic
+# bold_italic_font    JetBrains Mono Bold Italic
 
-font_family         Iosevka Term Regular
-bold_font           Iosevka Term Bold
-italic_font         Iosevka Term Italic
-bold_italic_font    Iosevka Term Bold Italic
+# font_family         Iosevka Term Regular
+# bold_font           Iosevka Term Bold
+# italic_font         Iosevka Term Italic
+# bold_italic_font    Iosevka Term Bold Italic
+
+font_family         Iosevka Term Slab Regular
+bold_font           Iosevka Term Slab Bold
+italic_font         Iosevka Term Slab Italic
+bold_italic_font    Iosevka Term Slab Bold Italic
 
 #: Font size (in pts)
 
