--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,14 @@
+#  _    _ _   _                           __ 
+# | | _(_) |_| |_ _   _   ___ ___  _ __  / _|
+# | |/ / | __| __| | | | / __/ _ \| '_ \| |_ 
+# |   <| | |_| |_| |_| || (_| (_) | | | |  _|
+# |_|\_\_|\__|\__|\__, (_)___\___/|_| |_|_|  
+#                 |___/                      
+#
+# Filename:     kitty.conf
+# GitHub:       https://github.com/xcession/dotfiles
+# Maintainer:   Пэйнт (Tharawut Paripaiboon) 
+
 #: Fonts {{{
 
 #: Font family
@@ -83,4 +94,3 @@ color15 #fefffe
 macos_quit_when_last_window_closed  yes
 
 #}}}
-
