--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,4 @@
+# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 #
 #  _    _ _   _                           __ 
 # | | _(_) |_| |_ _   _   ___ ___  _ __  / _|
@@ -8,27 +9,148 @@
 #
 # Filename:     kitty.conf
 # GitHub:       https://github.com/xcession/dotfiles
-# Maintainer:   Пэйнт (Tharawut Paripaiboon) 
+# Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
 #: Fonts {{{
-
-#: Font family
-#: To get a full list of supported fonts use the `kitty list-fonts` command.
 
 font_family         JetBrains Mono Regular
 bold_font           JetBrains Mono Bold
 italic_font         JetBrains Mono Italic
 bold_italic_font    JetBrains Mono Bold Italic
 
+#: To get a full list of supported fonts use the `kitty list-fonts`
+#: command.
+
+font_size   13.0
+
 #: Font size (in pts)
 
-font_size   13
+disable_ligatures never
+disable_ligatures_in tab cursor
 
-disable_ligatures   never
+#: Cursor Customization {{{
 
-#}}}
+cursor #cccccc
 
-#: Color scheme {{{
+#: Default cursor color
+
+cursor_text_color #111111
+
+#: Choose the color of text under the cursor. If you want it rendered
+#: with the background color of the cell underneath instead, use the
+#: special keyword: background
+
+cursor_shape block
+
+#: The cursor shape can be one of (block, beam, underline)
+
+cursor_blink_interval -1
+cursor_stop_blinking_after 15.0
+
+#: }}}
+
+#: Mouse {{{
+
+mouse_hide_wait 3.0
+
+#: Hide mouse cursor after the specified number of seconds of the
+#: mouse not being used. Set to zero to disable mouse cursor hiding.
+#: Set to a negative value to hide the mouse cursor immediately when
+#: typing text.
+
+url_color #0087bd
+url_style curly
+
+#: The color and style for highlighting URLs on mouse-over. url_style
+#: can be one of: none, single, double, curly
+
+open_url_modifiers kitty_mod
+
+#: The modifier keys to press when clicking with the mouse on URLs to
+#: open the URL
+
+open_url_with default
+
+#: The program with which to open URLs that are clicked on. The
+#: special value default means to use the operating system's default
+#: URL handler.
+
+copy_on_select no
+
+#: Copy to clipboard or a private buffer on select. With this set to
+#: clipboard, simply selecting text with the mouse will cause the text
+#: to be copied to clipboard. Useful on platforms such as macOS that
+#: do not have the concept of primary selections. You can instead
+#: specify a name such as a1 to copy to a private kitty buffer
+#: instead.
+
+strip_trailing_spaces never
+
+#: Remove spaces at the end of lines when copying to clipboard. A
+#: value of smart will do it when using normal selections, but not
+#: rectangle selections. always will always do it.
+
+rectangle_select_modifiers ctrl+alt
+
+#: The modifiers to use rectangular selection (i.e. to select text in
+#: a rectangular block with the mouse)
+
+select_by_word_characters :@-./_~?&=%+#
+
+#: Characters considered part of a word when double clicking. In
+#: addition to these characters any character that is marked as an
+#: alpha-numeric character in the unicode database will be matched.
+
+click_interval -1.0
+
+#: The interval between successive clicks to detect double/triple
+#: clicks (in seconds). Negative numbers will use the system default
+#: instead, if available, or fallback to 0.5.
+
+focus_follows_mouse no
+
+#: Set the active window to the window under the mouse when moving the
+#: mouse around
+
+#: }}}
+
+#: Performance tuning {{{
+
+repaint_delay 10
+
+#: Delay (in milliseconds) between screen updates. Decreasing it,
+#: increases frames-per-second (FPS) at the cost of more CPU usage.
+#: The default value yields ~100 FPS which is more than sufficient for
+#: most uses. Note that to actually achieve 100 FPS you have to either
+#: set sync_to_monitor to no or use a monitor with a high refresh
+#: rate.
+
+input_delay 3
+
+#: Delay (in milliseconds) before input from the program running in
+#: the terminal is processed. Note that decreasing it will increase
+#: responsiveness, but also increase CPU usage and might cause flicker
+#: in full screen programs that redraw the entire screen on each loop,
+#: because kitty is so fast that partial screen updates will be drawn.
+
+sync_to_monitor yes
+
+#: Sync screen updates to the refresh rate of the monitor. This
+#: prevents tearing (https://en.wikipedia.org/wiki/Screen_tearing)
+#: when scrolling. However, it limits the rendering speed to the
+#: refresh rate of your monitor. With a very high speed mouse/high
+#: keyboard repeat rate, you may notice some slight input latency. If
+#: so, set this to no.
+
+#: }}}
+
+#: Terminal bell {{{
+
+enable_audio_bell no
+
+#: }}}
+
+#: Color Scheme {{{
 
 foreground #feffff
 background #121212
@@ -90,7 +212,7 @@ color15 #fefffe
 
 #}}}
 
-#: OS specific tweaks {{{
+#: OS Specific Tweaks {{{
 
 macos_quit_when_last_window_closed  yes
 
