--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,3 @@
-# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 #
 #  _    _ _   _                           __ 
 # | | _(_) |_| |_ _   _   ___ ___  _ __  / _|
@@ -219,3 +218,5 @@ color15 #fefffe
 macos_quit_when_last_window_closed  yes
 
 #}}}
+
+" vim:fileencoding=utf-8:foldmethod=marker:foldlevel=0
