--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,4 +1,13 @@
-# Configuration for Alacritty, the GPU enhanced terminal emulator.
+#
+#        _                 _ _   _                          _ 
+#   __ _| | __ _  ___ _ __(_) |_| |_ _   _  _   _ _ __ ___ | |
+#  / _` | |/ _` |/ __| '__| | __| __| | | || | | | '_ ` _ \| |
+# | (_| | | (_| | (__| |  | | |_| |_| |_| || |_| | | | | | | |
+#  \__,_|_|\__,_|\___|_|  |_|\__|\__|\__, (_)__, |_| |_| |_|_|
+#                                   |___/  |___/             
+# Filename:     alacritty.yml
+# GitHub:       https://github.com/xcession/dotfiles
+# Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
