Add vim filetype

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -219,4 +219,4 @@ macos_quit_when_last_window_closed  yes
 
 #}}}
 
-" vim:fileencoding=utf-8:foldmethod=marker:foldlevel=0
+" vim:fileencoding=utf-8:ft=conf:foldmethod=marker:foldlevel=0
