--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,10 +12,10 @@
 
 #: Fonts {{{
 
-font_family         JetBrains Mono Regular
-bold_font           JetBrains Mono Bold
-italic_font         JetBrains Mono Italic
-bold_italic_font    JetBrains Mono Bold Italic
+font_family         JetBrains Mono
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
 
 #: To get a full list of supported fonts use the `kitty list-fonts`
 #: command.
