Add emoji config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -27,6 +27,8 @@ font_size   11.0
 disable_ligatures never
 disable_ligatures_in tab cursor
 
+prefer_color_emoji yes
+
 #:}}}
 
 #: Cursor Customization {{{
