--- a/.config/i3/config
+++ b/.config/i3/config
@@ -217,11 +217,11 @@ for_window [urgent="latest"]    focus
 focus_on_window_activation      focus
 
 # container layout
-#bindsym $Mod+h split h
-#bindsym $Mod+v split v
+bindsym $Mod+b split h
+bindsym $Mod+v split v
 #bindsym $Mod+Shift+t layout tabbed
 #bindsym $Mod+Shift+s layout stacking
-#bindsym $Mod+Shift+h layout toggle split
+bindsym $Mod+Mod1+b layout toggle split
 
 default_orientation horizontal
 
