--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,4 +1,14 @@
-# i3status config
+#
+#  _ _____                   
+# (_)___ /_      ___ __ ___  
+# | | |_ \ \ /\ / / '_ ` _ \ 
+# | |___) \ V  V /| | | | | |
+# |_|____/ \_/\_/ |_| |_| |_|
+#             i3status config
+#
+# Filename:     config
+# GitHub:       https://github.com/xcession/dotfiles
+# Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
 general {
         output_format   = "i3bar"
