--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,8 +12,7 @@
 
 #: Fonts {{{
 
-#: To get a full list of supported fonts use the `kitty list-fonts`
-#: command.
+#: To get a full list of supported fonts use `kitty list-fonts`
 
 font_family         JetBrains Mono
 bold_font           auto
@@ -31,6 +30,8 @@ adjust_column_width 0
 
 disable_ligatures never
 disable_ligatures_in tab cursor
+
+prefer_color_emoji yes
 
 #:}}}
 
