--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,13 +12,12 @@
 
 #: Fonts {{{
 
-#: To get a full list of supported fonts use the `kitty list-fonts`
-#: command.
+#: To get a full list of supported fonts use `kitty list-fonts`
 
 font_family         JetBrains Mono Regular
-bold_font           JetBrains Mono Bold
-italic_font         JetBrains Mono Italic
-bold_italic_font    JetBrains Mono Bold Italic
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
 
 #: Font size (in pts)
 
