--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,6 +10,18 @@
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
+#: Autostart {{{
+
+# run with reload
+exec_always --no-startup-id xrdb -load ~/.Xresources
+
+# run once
+#exec --no-startup-id xfsettingsd
+
+#: }}}
+
+#: Variables {{{
+
 # mod key used for most binds
 # Mod1 = Alt
 # Mod4 = Super
@@ -24,14 +36,6 @@ set $right l
 # prefered terminal
 set $term kitty
 
-# border & title
-set $border_size 3
-for_window [class="^.*"] border pixel $border_size, title_format "<b> %class >> %title </b>"
-
-# gaps
-gaps inner 8
-gaps outer 0
-
 # bar and window color
 set $bg-color               #000000
 set $active-bg-color        #cdfd00
@@ -40,34 +44,79 @@ set $text-color             #f7f8f7
 set $inactive-text-color    #333333
 set $urgent-bg-color        #ff5300
 
+#: }}}
+
+#: Output configuration {{{
+
 # font
 font pango:JetBrains Mono 9
 
-############### Bar }
-bar {
-	status_command i3status
-	tray_output primary
-	position top
+# wallpaper
+#exec --no-startup-id "feh --bg-scale ~/.wallpaper.png"
 
-	colors {
-		background $bg-color
-		separator $inactive-text-color
-		#                   border              background          text
-		focused_workspace   $active-bg-color    $active-bg-color    $bg-color
-		inactive_workspace  $bg-color           $inactive-bg-color  $inactive-text-color
-		urgent_workspace    $urgent-bg-color    $urgent-bg-color    $text-color
-	}
-}
+#: }}}
 
-############### Autostart }
+#: Idle configuration {{{
 
-# run with reload
-exec_always --no-startup-id xrdb -load ~/.Xresources
+# The combination of xss-lock, nm-applet and pactl is a popular choice, so
+# they are included here as an example. Modify as you see fit.
 
-# run once
-#exec --no-startup-id xfsettingsd
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-############### Bindings }
+# lockscreen
+# set desktop background with custom effect
+#exec --no-startup-id "betterlockscreen -w dim"
+#bindsym $mod+shift+x exec betterlockscreen -l dim
+# set last used background
+#exec --no-startup-id "source ~/.fehbg"
+
+#: }}}
+
+#: Input configuration {{{
+
+# keyboard layouts
+exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle"
+
+#: }}}
+
+#: Container / Windows control {{{
+
+# border & title
+set $border_size 3
+for_window [class="^.*"] border pixel $border_size, title_format "<b> %class >> %title </b>"
+
+new_window  normal
+new_float   normal
+
+hide_edge_borders both
+
+# window colors
+#                           border              background          text                    indicator
+client.focused              $active-bg-color    $active-bg-color    $inactive-text-color    #00ff00
+client.unfocused            $bg-color           $bg-color           $inactive-text-color    #00ff00
+client.focused_inactive     $inactive-bg-color	$inactive-bg-color	$bg-color               #00ff00
+client.urgent               $urgent-bg-color    $urgent-bg-color    $text-color             #00ff00
+
+# switch to workspace with urgent window
+for_window [urgent="latest"]    focus
+focus_on_window_activation      focus
+
+# gaps
+gaps inner 8
+gaps outer 0
+
+#: }}}
+
+#: Key bindings {{{
+
+#: Basic {{{
+
+# terminal
+#bindsym $Mod+t          exec --no-startup-id i3-sensible-terminal
+bindsym $Mod+t          exec --no-startup-id $term
+bindsym $Mod+Return     exec --no-startup-id $term
 
 # kill focused window
 bindsym $Mod+Shift+q kill
@@ -78,36 +127,47 @@ bindsym Mod1+F4 kill
 #bindsym $Mod+d exec --no-startup-id rofi_run -r
 bindsym $Mod+d exec --no-startup-id "rofi -modi run,drun -show drun -line-padding 4 -columns 2 -padding 50 -hide-scrollbar -show-icons"
 
-# core
-#bindsym $Mod+t          exec --no-startup-id i3-sensible-terminal
-bindsym $Mod+t          exec --no-startup-id $term
-bindsym $Mod+Return     exec --no-startup-id $term
-#bindsym Control+Shift+t exec --no-startup-id $term
+# restart inplace (preserves your layout/session, can be used to upgrade wm)
+bindsym $Mod+Shift+r restart
+
+# reload the configuration file
+bindsym $Mod+Shift+c reload
+
+# exit i3 (logs you out of your X session)
+bindsym $Mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # logout script
 bindsym $Mod+x exec --no-startup-id rofi_run -l
 
-# keyboard layouts
-exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle"
+#: }}}
 
-# screenshot
-bindsym Print exec --no-startup-id "scrot '%s.png' -e 'mv $f $$(xdg-user-dir PICTURES)/screenshot-%s-$wx$h.png ; feh $$(xdg-user-dir PICTURES)/screenshot-%s-$wx$h.png'"
+#: Moving around {{{
 
-# audio
-bindsym XF86AudioMute           exec --no-startup-id pamixer -t
-bindsym XF86AudioRaiseVolume    exec --no-startup-id pamixer -i 2
-bindsym XF86AudioLowerVolume    exec --no-startup-id pamixer -d 2
+# move focus around
+bindsym $Mod+$left  focus left
+bindsym $Mod+$down  focus down
+bindsym $Mod+$up    focus up
+bindsym $Mod+$right focus right
+# alternatively, you can use the cursor keys:
+bindsym $Mod+Left   focus left
+bindsym $Mod+Down   focus down
+bindsym $Mod+Up     focus up
+bindsym $Mod+Right  focus right
 
-# play/pause keys for spotify
-bindsym XF86AudioPlay exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause 
-bindsym XF86AudioNext exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
-bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+# move focused window
+bindsym $Mod+Shift+$left    move left   10px
+bindsym $Mod+Shift+$down    move down   10px
+bindsym $Mod+Shift+$up      move up     10px
+bindsym $Mod+Shift+$right   move right  10px
+# alternatively, you can use the cursor keys:
+bindsym $Mod+Shift+Left     move left   10px
+bindsym $Mod+Shift+Down     move down   10px
+bindsym $Mod+Shift+Up       move up     10px
+bindsym $Mod+Shift+Right    move right  10px
 
-# backlight
-bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 ; exec --no-startup-id "current_brightness=$(xbacklight -get) && notify-send \\"Screen Brightness\\", $current_brightness -u low -t 1000"
-bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ; exec --no-startup-id "current_brightness=$(xbacklight -get) && notify-send \\"Screen Brightness\\", $current_brightness -u low -t 1000"
+#: }}}
 
-############### Workspace }
+#: Workspaces {{{
 
 # switch to workspace
 bindsym $Mod+1 workspace 1
@@ -118,7 +178,6 @@ bindsym $Mod+5 workspace 5
 bindsym $Mod+6 workspace j
 bindsym $Mod+7 workspace 7
 bindsym $Mod+8 workspace 8
-
 # switch to workspace - numpad alternatives
 bindsym $Mod+Mod2+KP_1 workspace 1
 bindsym $Mod+Mod2+KP_2 workspace 2
@@ -143,106 +202,72 @@ bindsym $Mod+Shift+6 move container to workspace 6; workspace 6
 bindsym $Mod+Shift+7 move container to workspace 7; workspace 7
 bindsym $Mod+Shift+8 move container to workspace 8; workspace 8
 
-############### Reload configs }
+# Note: workspaces can have any name you want, not just numbers.
+# We just use 1-8 as the default.
 
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $Mod+Shift+r restart
+#: }}}
 
-# reload the configuration file
-bindsym $Mod+Shift+c reload
+#: Layouts {{{
 
-############### Container/Window control }
+# split layout
+bindsym $Mod+b split h
+bindsym $Mod+v split v
 
-# window colors
-#                           border              background          text                    indicator
-client.focused              $active-bg-color    $active-bg-color    $inactive-text-color    #00ff00
-client.unfocused            $bg-color           $bg-color           $inactive-text-color    #00ff00
-client.focused_inactive     $inactive-bg-color	$inactive-bg-color	$bg-color               #00ff00
-client.urgent               $urgent-bg-color    $urgent-bg-color    $text-color             #00ff00
+#TODO
+# switch between layouts
+#bindsym $Mod+Shift+t layout tabbed
+#bindsym $Mod+Shift+s layout stacking
+#bindsym $Mod+Mod1+b layout toggle split
 
-# scratchpad, floating
+default_orientation horizontal
+
+# make the current focus fullscreen
+bindsym $Mod+f fullscreen toggle
+
+# toggle the current focus between tiling / floating
 bindsym Mod1+Shift+space floating toggle
 floating_modifier Mod1
 
-# enter fullscreen mode for the focused container
-bindsym $Mod+f fullscreen toggle
-
-# change focus between tiling / floating windows
+# move focus between tiling / floating windows
 bindsym Mod1+space focus mode_toggle
 
-# change focus
-bindsym $Mod+$left  focus left
-bindsym $Mod+$down  focus down
-bindsym $Mod+$up    focus up
-bindsym $Mod+$right focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $Mod+Left   focus left
-bindsym $Mod+Down   focus down
-bindsym $Mod+Up     focus up
-bindsym $Mod+Right  focus right
-
+# move focus between parent / child windows
 bindsym $Mod+p focus parent
 bindsym $Mod+c focus child
 
-# move focused window
-bindsym $Mod+Shift+$left    move left   10px
-bindsym $Mod+Shift+$down    move down   10px
-bindsym $Mod+Shift+$up      move up     10px
-bindsym $Mod+Shift+$right   move right  10px
+#: }}}
 
-# alternatively, you can use the cursor keys:
-bindsym $Mod+Shift+Left     move left   10px
-bindsym $Mod+Shift+Down     move down   10px
-bindsym $Mod+Shift+Up       move up     10px
-bindsym $Mod+Shift+Right    move right  10px
+#: Resizing containers {{{
 
-# resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+  # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        bindsym $up     resize shrink   height  5 px or 5 ppt
-        bindsym $down   resize grow     height  5 px or 5 ppt
-        bindsym $left   resize shrink   width   5 px or 5 ppt
-        bindsym $right  resize grow     width   5 px or 5 ppt
+  # Pressing up will shrink the window’s height.
+  # Pressing down will grow the window’s height.
+  # Pressing left will shrink the window’s width.
+  # Pressing right will grow the window’s width.
+  bindsym $up     resize shrink   height  5 px or 5 ppt
+  bindsym $down   resize grow     height  5 px or 5 ppt
+  bindsym $left   resize shrink   width   5 px or 5 ppt
+  bindsym $right  resize grow     width   5 px or 5 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Up      resize shrink   height  5 px or 5 ppt
-        bindsym Down    resize grow     height  5 px or 5 ppt
-        bindsym Left    resize shrink   width   5 px or 5 ppt
-        bindsym Right   resize grow     width   5 px or 5 ppt
+  # same bindings, but for the arrow keys
+  bindsym Up      resize shrink   height  5 px or 5 ppt
+  bindsym Down    resize grow     height  5 px or 5 ppt
+  bindsym Left    resize shrink   width   5 px or 5 ppt
+  bindsym Right   resize grow     width   5 px or 5 ppt
 
-        # back to normal: Enter or Escape or $Mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $Mod+r mode "default"
+  # back to normal: Enter or Escape or $Mod+r
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+  bindsym $Mod+r mode "default"
 }
 
 bindsym $Mod+r mode "resize"
 
-# switch to workspace with urgent window
-for_window [urgent="latest"]    focus
-focus_on_window_activation      focus
+#: }}}
 
-# container layout
-bindsym $Mod+b split h
-bindsym $Mod+v split v
-#bindsym $Mod+Shift+t layout tabbed
-#bindsym $Mod+Shift+s layout stacking
-bindsym $Mod+Mod1+b layout toggle split
-
-default_orientation horizontal
-
-############### Border & Gaps }
-
-new_window  normal
-new_float   normal
-
-hide_edge_borders both
+#: Border & Gaps {{{
 
 bindsym $Mod+Shift+b border toggle
 
@@ -261,7 +286,55 @@ bindsym $Mod+u border none
 #bindsym $Mod+Control+Shift+plus     gaps outer all     plus  5
 #bindsym $Mod+Control+Shift+minus    gaps outer all     minus 5
 
-############### Application Settings }
+#}}}
+
+#: Media control {{{
+
+# audio
+bindsym XF86AudioMute           exec --no-startup-id pamixer -t
+bindsym XF86AudioRaiseVolume    exec --no-startup-id pamixer -i 2
+bindsym XF86AudioLowerVolume    exec --no-startup-id pamixer -d 2
+
+# play/pause keys for spotify
+bindsym XF86AudioPlay exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause 
+bindsym XF86AudioNext exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+
+# backlight
+bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 ; exec --no-startup-id "current_brightness=$(xbacklight -get) && notify-send \\"Screen Brightness\\", $current_brightness -u low -t 1000"
+bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ; exec --no-startup-id "current_brightness=$(xbacklight -get) && notify-send \\"Screen Brightness\\", $current_brightness -u low -t 1000"
+
+#: }}}
+
+#: Misc {{{
+
+# screenshot
+bindsym Print exec --no-startup-id "scrot '%s.png' -e 'mv $f $$(xdg-user-dir PICTURES)/screenshot-%s-$wx$h.png ; feh $$(xdg-user-dir PICTURES)/screenshot-%s-$wx$h.png'"
+
+#: }}}
+
+#: }}}
+
+#: Statusbar {{{
+
+bar {
+	status_command i3status
+	tray_output primary
+	position top
+
+	colors {
+		background $bg-color
+		separator $inactive-text-color
+		#                   border              background          text
+		focused_workspace   $active-bg-color    $active-bg-color    $bg-color
+		inactive_workspace  $bg-color           $inactive-bg-color  $inactive-text-color
+		urgent_workspace    $urgent-bg-color    $urgent-bg-color    $text-color
+	}
+}
+
+#: }}}
+
+#: Application Settings {{{
 
 # assign applications to specific workspace
 #assign [class="(?i)(?:firefox)"]    1
@@ -275,22 +348,6 @@ for_window [window_role="(?i)(?:pop-up|setup)"]         floating enable
 
 popup_during_fullscreen smart
 
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
+#: }}}
 
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# exit i3 (logs you out of your X session)
-bindsym $Mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# set wallpaper
-#exec --no-startup-id "feh --bg-scale ~/.wallpaper.png"
-
-# lockscreen
-# set desktop background with custom effect
-#exec --no-startup-id "betterlockscreen -w dim"
-#bindsym $mod+shift+x exec betterlockscreen -l dim
-# set last used background
-#exec --no-startup-id "source ~/.fehbg"
+# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
