--- a/.config/termite/config
+++ b/.config/termite/config
@@ -1,3 +1,15 @@
+#
+#  _                      _ _
+# | |_ ___ _ __ _ __ ___ (_) |_ ___
+# | __/ _ \ '__| '_ ` _ \| | __/ _ \
+# | ||  __/ |  | | | | | | | ||  __/
+#  \__\___|_|  |_| |_| |_|_|\__\___|
+#                     termite config
+#
+# Filename:     config
+# GitHub:       https://github.com/xcession/dotfiles
+# Maintainer:   Пэйнт (Tharawut Paripaiboon)
+
 [options]
 allow_bold = true
 #audible_bell = false
