--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,7 +14,7 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         JetBrains Mono Regular
+font_family         JetBrains Mono
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
