--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -100,9 +100,11 @@ url_prefixes http https file ftp
 
 copy_on_select no
 
-#: Remove spaces at the end of lines when copying to clipboard. A
-#: value of smart will do it when using normal selections, but not
-#: rectangle selections. always will always do it.
+#: Remove spaces at the end of lines when copying to clipboard.
+#:
+#: smart      = do it when using normal selections, but not rectangle
+#:              selections.
+#: always     = always do it.
 
 strip_trailing_spaces smart
 
@@ -126,7 +128,7 @@ click_interval -1.0
 focus_follows_mouse no
 
 #: The shape of the mouse pointer when the program running in the
-#: terminal grabs the mouse. Valid values are: arrow, beam and hand
+#: terminal grabs the mouse. (arrow, beam, hand)
 
 pointer_shape_when_grabbed arrow
 
@@ -642,9 +644,7 @@ macos_quit_when_last_window_closed  yes
 macos_window_resizable yes
 
 #: Draw an extra border around the font with the given width, to
-#: increase legibility at small font sizes. For example, a value of
-#: 0.75 will result in rendering that looks similar to sub-pixel
-#: antialiasing at common font sizes.
+#: increase legibility at small font sizes.
 
 macos_thicken_font 0
 
@@ -653,12 +653,14 @@ macos_thicken_font 0
 
 macos_traditional_fullscreen no
 
-#: Show or hide the window title in the macOS window or menu-bar. A
-#: value of window will show the title of the currently active window
-#: at the top of the macOS window. A value of menubar will show the
-#: title of the currently active window in the macOS menu-bar, making
-#: use of otherwise wasted space. all will show the title everywhere
-#: and none hides the title in the window and the menu-bar.
+#: Show or hide the window title in the macOS window or menu-bar.
+#:
+#: window     = Show the title of the currently active window at the
+#:              top of the macOS window.
+#: menubar    = show the title of the currently active window in the
+#:              macOS menu-bar.
+#: all        = will show the title everywhere
+#: none       = hides the title in the window and the menu-bar.
 
 macos_show_window_title_in window
 
