Change font to Iosevka and adjust macos_thicken_font setting

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,7 +14,7 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         JetBrains Mono
+font_family         Iosevka Term
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
@@ -646,7 +646,7 @@ macos_window_resizable yes
 #: 0.75 will result in rendering that looks similar to sub-pixel
 #: antialiasing at common font sizes.
 
-macos_thicken_font 0
+macos_thicken_font 0.25
 
 #: Use the traditional full-screen transition, that is faster, but
 #: less pretty.
