--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -100,9 +100,11 @@ url_prefixes http https file ftp
 
 copy_on_select no
 
-#: Remove spaces at the end of lines when copying to clipboard. A
-#: value of smart will do it when using normal selections, but not
-#: rectangle selections. always will always do it.
+#: Remove spaces at the end of lines when copying to clipboard.
+#:
+#: smart      = do it when using normal selections, but not rectangle
+#:              selections.
+#: always     = always do it.
 
 strip_trailing_spaces smart
 
@@ -126,7 +128,7 @@ click_interval -1.0
 focus_follows_mouse no
 
 #: The shape of the mouse pointer when the program running in the
-#: terminal grabs the mouse. Valid values are: arrow, beam and hand
+#: terminal grabs the mouse. (arrow, beam, hand)
 
 pointer_shape_when_grabbed arrow
 
