Use srcery colorscheme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -37,14 +37,6 @@ prefer_color_emoji yes
 
 #: Cursor Customization {{{
 
-cursor #cccccc
-
-#: Choose the color of text under the cursor. If you want it rendered
-#: with the background color of the cell underneath instead, use the
-#: special keyword: background
-
-cursor_text_color #111111
-
 #: The cursor shape (block, beam, underline)
 
 cursor_shape block
@@ -389,8 +381,16 @@ tab_bar_background none
 
 #: Color Scheme {{{
 
-foreground #feffff
-background #121212
+cursor #fbb829
+
+#: Choose the color of text under the cursor. If you want it rendered
+#: with the background color of the cell underneath instead, use the
+#: special keyword: background
+
+cursor_text_color #1c1b19
+
+foreground #fce8c3
+background #1c1b19
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -447,47 +447,47 @@ dim_opacity 0.75
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-selection_foreground #000000
+selection_foreground #1c1b19
 
 #: The background for text selected with mouse.
 
-selection_background #dddedd
+selection_background #fce8c3
 
 #: The 16 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
 #: black
-color0  #1b1c1b
-color8  #333333
+color0  #1c1b19
+color8  #918175
 
 #: red
-color1  #ff5300
-color9  #ff6c00
+color1  #ef2f27
+color9  #f75341
 
 #: green
-color2  #0cbe02
-color10 #77ff48
+color2  #519f50
+color10 #98bc37
 
 #: yellow
-color3  #f4d500
-color11 #ffe700
+color3  #fbb829
+color11 #fed06e
 
 #: blue
-color4  #8ba9e3
-color12 #9dd1ff
+color4  #2c78bf
+color12 #68a8e4
 
 #: magenta
-color5  #dd68ec
-color13 #ea81ff
+color5  #e02c6d
+color13 #ff5c8f
 
 #: cyan
-color6  #cdfd00
-color14 #ddff3b
+color6  #0aaeb3
+color14 #53fde9
 
 #: white
-color7  #f7f8f7
-color15 #fefffe
+color7  #d0bfa1
+color15 #fce8c3
 
 #: Color for marks of type 1
 
@@ -495,7 +495,7 @@ mark1_foreground black
 
 #: Color for marks of type 1 (light steel blue)
 
-mark1_background #98d3cb
+mark1_background #68a8e4
 
 #: Color for marks of type 2
 
@@ -503,7 +503,7 @@ mark2_foreground black
 
 #: Color for marks of type 1 (beige)
 
-mark2_background #f2dcd3
+mark2_background #fce8c3
 
 #: Color for marks of type 3
 
@@ -511,7 +511,7 @@ mark3_foreground black
 
 #: Color for marks of type 1 (violet)
 
-mark3_background #f274bc
+mark3_background #ff5c8f
 
 #: }}}
 
