Update configs header

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,11 @@
+# $HOME/.config/kitty/kitty.conf
+#  _    _ _   _         
+# | | _(_) |_| |_ _   _ 
+# | |/ / | __| __| | | |
+# |   <| | |_| |_| |_| |
+# |_|\_\_|\__|\__|\__, |
+#                 |___/ 
 #
-#  _    _ _   _                           __ 
-# | | _(_) |_| |_ _   _   ___ ___  _ __  / _|
-# | |/ / | __| __| | | | / __/ _ \| '_ \| |_ 
-# |   <| | |_| |_| |_| || (_| (_) | | | |  _|
-# |_|\_\_|\__|\__|\__, (_)___\___/|_| |_|_|  
-#                 |___/                      
-#
-# Filename:     kitty.conf
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
