--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,4 +1,4 @@
-#
+# $HOME/.config/alacritty/alacritty.yml
 #        _                 _ _   _         
 #   __ _| | __ _  ___ _ __(_) |_| |_ _   _ 
 #  / _` | |/ _` |/ __| '__| | __| __| | | |
@@ -6,7 +6,6 @@
 #  \__,_|_|\__,_|\___|_|  |_|\__|\__|\__, |
 #                                    |___/ 
 #
-# Filename:     alacritty.yml
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
