Disable italic font style to solve wrong cyrillic characters

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -90,7 +90,7 @@ font:
     style: Bold
   italic:
     family: Iosevka
-    style: Italic
+    style: Regular
   bold_italic:
     family: Iosevka
     style: Bold Italic
