--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,4 +1,4 @@
-#
+# $HOME/.config/i3status/config
 #  _ _____
 # (_)___ /_      ___ __ ___
 # | | |_ \ \ /\ / / '_ ` _ \
@@ -6,7 +6,6 @@
 # |_|____/ \_/\_/ |_| |_| |_|
 #             i3status config
 #
-# Filename:     config
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
