Change bar-empty foreground color

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -435,7 +435,7 @@ bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = ${colors.background-alt}
 
 [module/temperature]
 ;https://github.com/polybar/polybar/wiki/Module:-temperature
