Change TERM environment variable

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -619,7 +619,8 @@ clipboard_control write-clipboard write-primary
 #: from key-presses, to colors, to various advanced features may not
 #: work.
 
-term xterm-kitty
+# term xterm-kitty
+term xterm-256color
 
 #: }}}
 
