Add config header and folding setting

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,3 +1,13 @@
+# $HOME/.config/ranger/rc.conf
+#  _ __ __ _ _ __   __ _  ___ _ __
+# | '__/ _` | '_ \ / _` |/ _ \ '__|
+# | | | (_| | | | | (_| |  __/ |
+# |_|  \__,_|_| |_|\__, |\___|_|
+#                  |___/
+#
+# GitHub:       https://github.com/xcession/dotfiles
+# Maintainer:   Пэйнт (Tharawut Paripaiboon)
+#
 # ===================================================================
 # This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
@@ -757,3 +767,5 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
