Add cyberpunk-umbra theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -925,4 +925,6 @@ map kitty_mod+delete clear_terminal reset active
 
 #: }}}
 
+include ./theme.conf
+
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
